syntax = "proto3";
option go_package = ".;proto";

import "common.proto";

service AuthService {
    rpc SignIn(SignInRequest) returns (SignInResponse);
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
}

message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignInResponse {
    Response response = 1;
    string token = 2;
}

message SignUpRequest {
    string username = 1;
}

message SignUpResponse {
    Response response = 1;
}